--- a/UserRoles/Views/Meetings/Create.cshtml
+++ b/UserRoles/Views/Meetings/Create.cshtml
@@ -13,155 +13,140 @@
 <br />
 <br />
 <br />
-
-
-<script src="~/ckeditors/ckeditor.js"></script>
-<script src="~/ckeditors/adapters/jquery.js"></script>
-
-<h2>Create</h2>
-
-
-
-
-@*<div class="form-horizontal">
-    <h4>Meeting</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.CategoryId, "Type of event", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("CategoryId", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
-        </div>
-    </div>
-<div class="form-group">
-        @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-<div class="form-group">
-    @Html.LabelFor(model => model.Start, htmlAttributes: new { @class = "control-label col-md-2" })
-    <div class="col-md-10">
-        @Html.EditorFor(model => model.Start, new { htmlAttributes = new { @type = "time" } })
-        @Html.ValidationMessageFor(model => model.Start, "", new { @class = "text-danger" })
-    </div>
-</div>
-<div class="form-group">
-        @Html.LabelFor(model => model.End, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.End, new { htmlAttributes = new { @type = "time" } })
-            @Html.ValidationMessageFor(model => model.End, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-<div class="form-group">
-    @Html.LabelFor(model => model.Attend, htmlAttributes: new { @class = "control-label col-md-2" })
-    <div class="col-md-10">
-        @Html.TextAreaFor(model => model.Attend, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.Attend, "", new { @class = "text-danger" })
-    </div>
-</div>
-<div class="form-group">
-        @Html.LabelFor(model => model.Discussion, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.TextAreaFor(model => model.Discussion, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Discussion, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-<div class="form-group">
-    @Html.LabelFor(model => model.Discussion, new { @class = "control-label col-md-2" })
-    <div class="col-md-10">
-        @Html.TextArea(-->model => model.Description<!--"Discussion", new { @class = "ckeditor", @id = "Discussion", @rows = "200" })
-        @Html.ValidationMessageFor(model => model.Discussion)
-    </div>
-
-</div>
-
-
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-success" />
-        </div>
-    </div>
-</div>*@
-
-
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-    @Scripts.Render("~/ckeditors/ckeditor.js")
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="/voice/script.js"></script>
-}
-
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Voice Controlled Notes App</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    @*<meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">*@
 
     @*<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shoelace-css/1.0.0-beta16/shoelace.css">*@
     @*<link rel="stylesheet" href="/voice/styles.css">*@
 
+
 </head>
-<body>
-    <div class="container">
 
-        <h1>Voice Controlled Notes App</h1>
-        <p class="page-description">A tiny app that allows you to take notes by recording your voice</p>
-        <p><a class="tz-link" href="https://tutorialzine.com/2017/08/converting-from-speech-to-text-with-javascript">Read the full article on Tutorialzine »</a></p>
+@*<script src="~/ckeditors/ckeditor.js"></script>
+    <script src="~/ckeditors/adapters/jquery.js"></script>*@
+<h2>Create</h2>
+@using (Html.BeginForm("Create", "Meetings", FormMethod.Post))
+{
+    @Html.AntiForgeryToken()
 
-        <h3 class="no-browser-support">Sorry, Your Browser Doesn't Support the Web Speech API. Try Opening This Demo In Google Chrome.</h3>
 
-        <div class="app">
-            <h3>Add New Note</h3>
-            <div class="input-single">
-                @Html.LabelFor(model => model.Discussion, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.TextArea("Discussion", new { @class = "ckeditor", @id = "Discussion", @rows = "200" })
-                    @Html.ValidationMessageFor(model => model.Discussion)
+    <body>
+        <div class="container">
+
+            <div class="form-horizontal">
+                <h4>Meeting</h4>
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-                <button id="start-record-btn" title="Start Recording">Start Recognition</button>
-                <button id="pause-record-btn" title="Pause Recording">Pause Recognition</button>
-                <button id="save-note-btn" title="Save Note">Save Note</button>
-                <p id="recording-instructions">Press the <strong>Start Recognition</strong> button and allow access.</p>
 
-                <h3>My Notes</h3>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.CategoryId, "Type of event", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.DropDownList("CategoryId", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                @*<div class="form-group">
+            @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Start, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Start, new { htmlAttributes = new { @type = "time" } })
+                        @Html.ValidationMessageFor(model => model.Start, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                @*<div class="form-group">
+            @Html.LabelFor(model => model.End, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.End, new { htmlAttributes = new { @type = "time" } })
+                @Html.ValidationMessageFor(model => model.End, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Attend, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.TextAreaFor(model => model.Attend, new { htmlAttributes = new { @class = "form-control" , @rows = "4", @cols = "130" } })
+                        @Html.ValidationMessageFor(model => model.Attend, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+
+                <div class="app">
+                    @*<h3>Add New Note</h3>*@
+                    <div class="input-single">
+                        @Html.LabelFor(model => model.Discussion, new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.TextArea("Discussion", new
+                            {
+                                @class = "app",
+                                @id = "Discussion",
+                                @rows = "4",
+                                @cols = "130"
+                            })
+                            @Html.ValidationMessageFor(model => model.Discussion)
+                            <input type="button" value="Start" id="start-record-btn" />
+                            <input type="button" value="Pause" id="pause-record-btn" />
+                            <p id="recording-instructions">Press the <strong>Start Recognition</strong> button and allow access.</p>
+                        </div>
+                      
+                        @*<button id="start-record-btn" title="Start Recording">Start Recognition</button>*@
+                        @*<button id="pause-record-btn" title="Pause Recording">Pause Recognition</button>*@
+                        @*<button id="save-note-btn" title="Save Note">Save Note</button>
+                        <p id="recording-instructions">Press the <strong>Start Recognition</strong> button and allow access.</p>*@
+
+                        @*<h3>My Notes</h3>
                 <ul id="notes">
                     <li>
                         <p class="no-notes">You don't have any notes.</p>
                     </li>
-                </ul>
+                </ul>*@
 
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Create" class="btn btn-success" />
+                    </div>
+                </div>
             </div>
-            </div>
 
-    </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="/voice/script.js"></script>
 
-  
+
 
 </body>
+
+}
+
+
+
+
+
+
+
 </html>
+@section scripts{
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="/voice/script.js"></script>
+} 
