--- a/UserRoles/Views/Meetings/Details.cshtml
+++ b/UserRoles/Views/Meetings/Details.cshtml
@@ -78,6 +78,15 @@
             @Html.Raw(Model.Discussion)
 
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ckeditor)
+        </dt>
+
+        <dd>
+            @*@Html.DisplayFor(model => model.Discussion)*@
+            @Html.Raw(Model.ckeditor)
+
+        </dd>
 
     </dl>
 </div>
