--- a/UserRoles/Views/Meetings/Delete.cshtml
+++ b/UserRoles/Views/Meetings/Delete.cshtml
@@ -59,6 +59,14 @@
         <dd>
             @Html.DisplayFor(model => model.Discussion)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ckeditor)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ckeditor)
+        </dd>
+
 
     </dl>
 
