Reviews Updated and package detail view updated

--- a/UserRoles/Views/Home/Camera.cshtml
+++ b/UserRoles/Views/Home/Camera.cshtml
@@ -40,6 +40,7 @@
         let scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
         scanner.addListener('scan', function (content) {
             alert(content);
+            window.open(content);
         });
         Instascan.Camera.getCameras().then(function (cameras) {
             if (cameras.length > 0) {
