--- a/UserRoles/Views/Packages/PackageDetail.cshtml
+++ b/UserRoles/Views/Packages/PackageDetail.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "PackageDetail";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <style>
     * {
         box-sizing: border-box
@@ -10,7 +11,7 @@
 
     /* Slideshow container */
     .slideshow-container {
-        max-width: 1000px;
+        max-width: 300px;
         position: relative;
         margin: auto;
     }
@@ -28,7 +29,7 @@
         width: auto;
         margin-top: -22px;
         padding: 16px;
-        color: white;
+        color: deeppink;
         font-weight: bold;
         font-size: 18px;
         transition: 0.6s ease;
@@ -44,7 +45,7 @@
 
         /* On hover, add a black background color with a little bit see-through */
         .prev:hover, .next:hover {
-            background-color: rgba(0,0,0,0.8);
+            background-color: white;
         }
 
     /* Caption text */
@@ -114,7 +115,20 @@
     to {
         opacity: 1
     }
+
     }
+
+    .flex-container {
+        display: flex;
+        /* background-color: DodgerBlue;*/
+    }
+
+        .flex-container > div {
+            /*background-color: #f1f1f1;*/
+            /*margin: auto;*/
+            padding: 0px;
+            font-size: 15px;
+        }
 </style>
 <br />
 <br />
@@ -123,95 +137,106 @@
 <br />
 <br />
 <h2>PackageDetail</h2>
-<div>
-    <h4>Package</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Category.Category_Name)
-        </dt>
+<div class="flex-container">
+    <div>
+        <h4>Package</h4>
+        <hr />
+        <dl class="dl-horizontal">
 
-        <dd>
-            @Html.DisplayFor(model => model.Category.Category_Name)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Category.Category_Name)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.packageName)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Category.Category_Name)
+            </dd>
+            <br />
+            <dt>
+                @Html.DisplayNameFor(model => model.packageName)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.packageName)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.packageName)
+            </dd>
+            <br />
+            <dt>
+                @Html.DisplayNameFor(model => model.Price)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Price)
+            </dd>
+            <br />
 
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Description)
+            </dt>
+
+            <dd>
+                @Html.Raw(Model.Description)
+                @*@Html.DisplayFor(model => model.Description)*@
+            </dd>
+
+            <br />
+            <br />
+            <div style="padding-left:40%;">
+                <a href='@Url.Action("OrderNow", "EventCart", new { id = Model.PackageId })' onclick="location.href='@Url.Action("Process", "EventCart", null)" class="btn btn-primary"> Confirm Package</a>
+                <a href='@Url.Action("CusIndex", "Packages")' class="btn btn-primary"> Back</a>
+
+            </div>
+            @*<dt>
+                    @Html.DisplayNameFor(model => model.PackageImages)
+                </dt>*@
+    </div>
+    <div style="padding-left:20%;">
+        @foreach (var item in Model.PackageImages)
+        {
+            <div class="slideshow-container">
+
+                <!-- Full-width images with number and caption text -->
+                <div class="mySlides">
+                    <div class="numbertext">1 / 3</div>
+
+                    <img src="@Url.Content(( string.Format("data:image/jpg;base64,{0}",Convert.ToBase64String(item.Image))))" style="width:100%; border: 10px solid #555; border-radius:25px; -moz-box-shadow: 10px 10px 5px #ccc;-webkit-box-shadow: 10px 10px 5px #ccc; box-shadow: 10px 10px 5px #ccc; -moz-border-radius:25px;
+  -webkit-border-radius:25px;" />
+
+                </div>
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <br>
+
+            <!-- The dots/circles -->
+            <div style="text-align:center">
+                @*<span class="dot" onclick="currentSlide(1)"></span>*@
+
+            </div>
+            <!--<dd class="slideshow-container mySlides ">
+                <img src="@Url.Content(( string.Format("data:image/jpg;base64,{0}",Convert.ToBase64String(item.Image))))" style="width:100%" />
+
+            </dd>-->
+
+            @*<div class="text">Caption Text</div>*@
+
+            <!--<div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+            </div>
+
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+            <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+            </div>-->
 
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.Raw(Model.Description)
-            @*@Html.DisplayFor(model => model.Description)*@
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.PackageImages)
-        </dt>
+        }
+    </div>
 </div>
 
-@foreach (var item in Model.PackageImages)
-{
-<div class="slideshow-container">
 
-    <!-- Full-width images with number and caption text -->
-    <div class="mySlides">
-        <div class="numbertext">1 / 3</div>
-        <img src="@Url.Content(( string.Format("data:image/jpg;base64,{0}",Convert.ToBase64String(item.Image))))" style="width:100%" />
-
-    </div>
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-    <br>
-    
-    <!-- The dots/circles -->
-    <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-
-    </div>
-    <!--<dd class="slideshow-container mySlides ">
-        <img src="@Url.Content(( string.Format("data:image/jpg;base64,{0}",Convert.ToBase64String(item.Image))))" style="width:100%" />
-
-    </dd>-->
-
-    @*<div class="text">Caption Text</div>*@
-
-    <!--<div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-    </div>
-
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-    <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-    </div>-->
-
-
-}
-
-
-
-
-<a href='@Url.Action("OrderNow", "EventCart", new { id = Model.PackageId })' onclick="location.href='@Url.Action("Process", "EventCart", null)" class="btn btn-primary"> Add to Cart</a>
 
 <br />
 <br />
