--- a/UserRoles/Views/Reviews/AdminRevIndex.cshtml
+++ b/UserRoles/Views/Reviews/AdminRevIndex.cshtml
@@ -24,6 +24,15 @@
             @Html.DisplayNameFor(model => model.Rating)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.servRating)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.useService)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.recommend)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Comment)
         </th>
         <th>
@@ -37,25 +46,34 @@
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Rating)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Comment)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.isActive)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.CommentID }) |
-                @*@Html.ActionLink("Details", "Details", new { id = item.CommentID }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.CommentID })*@
-            </td>
-        </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.Rating)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.servRating)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.useService)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.recommend)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Comment)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Date)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.isActive)
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.CommentID }) |
+        @*@Html.ActionLink("Details", "Details", new { id = item.CommentID }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.CommentID })*@
+    </td>
+</tr>
     }
 
 </table>
