--- a/UserRoles/Views/Reviews/Details.cshtml
+++ b/UserRoles/Views/Reviews/Details.cshtml
@@ -34,6 +34,27 @@
         <dd>
             @Html.DisplayFor(model => model.Date)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.servRating)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.servRating)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.useService)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.useService)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.recommend)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.recommend)
+        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.isActive)
