--- a/UserRoles/Views/Reviews/Create.cshtml
+++ b/UserRoles/Views/Reviews/Create.cshtml
@@ -22,8 +22,8 @@
 
     <div class="form-horizontal">
         <h1>Review </h1>
-        <br />
-        <ul class="nav nav-tabs">
+        <hr />
+        <ul class="nav nav-pills">
             <li class="active">
                 <a href="#tab_1" data-toggle="tab">Question 1</a>
             </li>
