--- a/UserRoles/Views/Packages/Edit.cshtml
+++ b/UserRoles/Views/Packages/Edit.cshtml
@@ -73,7 +73,7 @@
             }
 
             <br />
-            <input type="file" name="image3" id="image3" multiple />
+            <input type="file" name="image3" id="image3"  />
 
             @Html.ValidationMessageFor(model => model.imagePack, "", new { @class = "text-danger" })
         </div>
