--- a/UserRoles/Views/Packages/CusIndex.cshtml
+++ b/UserRoles/Views/Packages/CusIndex.cshtml
@@ -130,10 +130,10 @@
                 <h6 style="font-size:15px"><b><span id="serviceprice" style="color:black">Decor Quantity: @item.Category</span></b></h6>
 
             </div>*@
-<div class="row">
-    @Html.ActionLink("Details", "PackageDetail", new { id = item.PackageId })
-    @*<a class="btn btn-default" data-toggle="modal" data-target="#myModal-@(item.PackageId)">More Information &raquo;</a>*@
-</div>
+        <div class="row">
+           
+            <a class="btn btn-default" data-toggle="modal" data-target="#myModal-@(item.PackageId)">More Information &raquo;</a>
+        </div>
         <br>
         @*<div class="row">
                 <a class="btn btn-default" href="">Select Items &raquo; </a>
@@ -141,9 +141,9 @@
         <br>
         @*</div>*@
         <!-- Modal -->
-    
+
         <div id="myModal-@(item.PackageId)" class="modal fade" role="dialog" data-backdrop="true">
-          
+
 
             <!-- Modal content-->
             <div class="modal-dialog">
@@ -153,7 +153,7 @@
                         <h4>@item.packageName</h4>
                     </div>
                     <div class="modal-body" style="padding:40px 50px;">
-                       
+
                         <div class="col-md-5">
 
                             @*<div class="col-md-5">*@
@@ -199,8 +199,8 @@
                             @*<b style="font-size:20px; font-weight:0; color:black;">Product Quantity : @item.Category</b>*@
                         </div>
                     </div>
-            
-                    
+
+
                     <div style="margin-top:175px" class="modal-footer">
 
                         <a href='@Url.Action("OrderNow", "EventCart", new { id = item.PackageId })' onclick="location.href='@Url.Action("Process", "EventCart", null)" class="btn btn-primary"> Add to Cart</a>
@@ -220,7 +220,7 @@
             </div>*@
 
 
-      }
+    }
     @Html.PagedListPager(Model, page => Url.Action("CusIndex", new { page, searchString = Request.QueryString["searchString"], search = Request.QueryString["search"] }),
        new PagedListRenderOptions() { Display = PagedListDisplayMode.IfNeeded, DisplayPageCountAndCurrentLocation = true, DisplayItemSliceAndTotal = true })
     @if (Model.Count() == 0)
