--- a/UserRoles/Views/Packages/Delete.cshtml
+++ b/UserRoles/Views/Packages/Delete.cshtml
@@ -4,7 +4,13 @@
     ViewBag.Title = "Delete";
     Layout = "~/Views/Shared/_Layout2.cshtml";
 }
-
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -41,7 +47,28 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Description)
+            @Html.Raw( Model.Description)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.imagePack)
+        </dt>
+        <dd>
+            @try
+            {
+
+                var base64 = Convert.ToBase64String(Model.imagePack);
+                var imgsrc = string.Format("data:image/jpg;base64,{0}", base64);
+                <img src='@imgsrc' style="max-width:400px;max-height:200px" />
+
+
+            }
+            catch
+            {
+                if (Model.imagePack == null)
+                {
+                    <img width="40" height="40" src="https://ixxidesign.azureedge.net/media/2388044/marcus-kraft-12-dont-worry-be-happy-white.jpg?mode=max&width=562&height=749" />
+                }
+            }
         </dd>
 
     </dl>
@@ -50,7 +77,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
