--- a/UserRoles/Views/Packages/Details.cshtml
+++ b/UserRoles/Views/Packages/Details.cshtml
@@ -42,7 +42,7 @@
         <dd>
             @Html.DisplayFor(model => model.Price)
         </dd>
-        <br/>
+        
 
         <dt>
             @Html.DisplayNameFor(model => model.Description)
@@ -50,34 +50,29 @@
 
         <dd>
             @Html.Raw(Model.Description)
-            @*@Html.DisplayFor(model => model.Description)*@
-        </dd>
-        @foreach(var item in Model.PackageImages)
-        {
-             <dt>
-            @Html.DisplayNameFor(model=> model.PackageImages)
-        </dt>
-        <dd>
-            
-                @try
-                {
-                    var base64 = Convert.ToBase64String(item.Image);
-                    var imgsrc = string.Format("data:image/jpg;base64,{0}", base64);
-                    <img src='@imgsrc' style="max-width:200px;max-height:200px" />
-
-
-                }
-                catch
-                {
-                    if (item.Image == null)
-                    {
-                        @*<img width="200" height="200" src="https://ixxidesign.azureedge.net/media/2388044/marcus-kraft-12-dont-worry-be-happy-white.jpg?mode=max&width=562&height=749" />*@
-                    }
-
-                }
            
         </dd>
-        }
+       <dt>
+           @Html.DisplayNameFor(model => model.imagePack)
+       </dt>
+       <dd>
+           @try
+           {
+
+               var base64 = Convert.ToBase64String(Model.imagePack);
+               var imgsrc = string.Format("data:image/jpg;base64,{0}", base64);
+               <img src='@imgsrc' style="max-width:400px;max-height:200px" />
+
+
+           }
+           catch
+           {
+               if (Model.imagePack == null)
+               {
+                   <img width="40" height="40" src="https://ixxidesign.azureedge.net/media/2388044/marcus-kraft-12-dont-worry-be-happy-white.jpg?mode=max&width=562&height=749" />
+               }
+           }
+       </dd>
        
     </dl>
 </div>
