--- a/UserRoles/Views/ShoppingCart/Index.cshtml
+++ b/UserRoles/Views/ShoppingCart/Index.cshtml
@@ -95,7 +95,7 @@
             @*<a href='@Url.Action( "Checkout", "ShoppingCart")' class="btn btn-primary">Checkout with paypal</a>*@
             <br />
             <br />
-            <a href='@Url.Action( "Create", "Maps")' class="btn btn-primary">Next</a>
+            <a href='@Url.Action( "DetailCapture", "ShoppingCart")' class="btn btn-primary">Next</a>
             @*@Html.ActionLink("Add Delivery", "Create", "Maps", null, new { @class = "continure-shopping" })*@
 
 
