fixed chart added pdf to reminders

--- a/UserRoles/Views/Reviews/ChartPie.cshtml
+++ b/UserRoles/Views/Reviews/ChartPie.cshtml
@@ -13,7 +13,16 @@
 <br />
 <h2>ChartPie</h2>
 
-<div >
-    <img src="@Url.Action("ChartPie", "EmailJob")" alt="Chart" />
-</div>
+<body>
+    <div> <img src="@Url.Action("ChartPie")" alt="Chart" />
+    </div>
+   
+    
+</body>
+
+
+@section scripts{
+   
+}
+
 
