--- a/UserRoles/Views/Reviews/Index.cshtml
+++ b/UserRoles/Views/Reviews/Index.cshtml
@@ -86,9 +86,10 @@
 
 </table>
 
-@*<div>
+<div>
     <img src="@Url.Action("ChartPie")" alt="Chart" />
-</div>*@
+    
+</div>
 <br />
 <br />
 <br />
