minor changes to linq statments on order pages

--- a/UserRoles/Views/Order/CusEvents.cshtml
+++ b/UserRoles/Views/Order/CusEvents.cshtml
@@ -16,7 +16,7 @@
 <br />
 <br />
 <br />
-<h2>CusEvents</h2>
+<h2>Customer Events</h2>
 
 <form asp-controller="Order" asp-action="CusEvents">
 
@@ -102,3 +102,10 @@
 @Html.PagedListPager(Model, page => Url.Action("CusEvents", new { page, searchString = Request.QueryString["searchString"], search = Request.QueryString["search"] }),
   new PagedListRenderOptions() { Display = PagedListDisplayMode.IfNeeded, DisplayPageCountAndCurrentLocation = true, DisplayItemSliceAndTotal = true })
 
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
