--- a/UserRoles/Views/Shared/_AdminNavbar.cshtml
+++ b/UserRoles/Views/Shared/_AdminNavbar.cshtml
@@ -177,7 +177,7 @@
 
 
 
-                        <li class="hvr-sweep-to-right">@Html.ActionLink("Role Management", "Index", "Role")</li>
+                        <li class="hvr-sweep-to-right">@Html.ActionLink("Role Management", "Index", "Account")</li>
 
 
                     }
