--- a/UserRoles/Views/Account/Index.cshtml
+++ b/UserRoles/Views/Account/Index.cshtml
@@ -13,7 +13,16 @@
 <br />
 <br />
 <h2>Index</h2>
+<form asp-controller="Account" asp-action="Index">
 
+
+    <p>You may search by Email</p>
+    <input type="text" name="SearchString" />
+    <input type="submit" value="Filter" />
+
+
+
+</form>
 @*<p>
         @Html.ActionLink("Create New", "Create")
     </p>*@
@@ -112,16 +121,26 @@
             <td>
                 @Html.DisplayFor(modelItem => item.UserName)
             </td>
-            <td>
+            @*<td>
                 @Html.Display("Name")
-            </td>
+            </td>*@
             <td>
                 @*<button class="updatebutton">update</button>*@ 
                 @Html.ActionLink("RegisterRole", "RegisterRole", new { id = item.Id }) |
                 @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                @Html.ActionLink("Remove", "Remove", new { id = item.Id })
             </td>
         </tr>
     }
 
 </table>
+
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
+<br />
+<br /><br />
