emailjobcontroller email  message updated

--- a/UserRoles/Views/Order/CusOngoing.cshtml
+++ b/UserRoles/Views/Order/CusOngoing.cshtml
@@ -4,7 +4,7 @@
 
 @{
     ViewBag.Title = "CusOngoing";
-    //Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <br />
 <br />
@@ -31,10 +31,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //Meta Tags -->
     <!-- Style-sheets -->
     <!-- Bootstrap Css -->
-    <link href="tables/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="tables/css/bootstrap.css" rel="stylesheet" type="text/css" @*media="all"*@ />
     <!-- Bootstrap Css -->
     <!-- Common Css -->
-    <link href="/tables/css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="/tables/css/style.css" rel="stylesheet" type="text/css" @*media="all"*@ />
     <!--// Common Css -->
     <!-- Nav Css -->
     @*<link rel="stylesheet" href="/tables/css/style4.css">*@
