--- a/UserRoles/Views/Order/CusOngoing.cshtml
+++ b/UserRoles/Views/Order/CusOngoing.cshtml
@@ -4,7 +4,7 @@
 
 @{
     ViewBag.Title = "CusOngoing";
-    //Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <br />
 <br />
@@ -47,6 +47,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     @*<link href="//fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">*@
     <!--//web-fonts-->
+
 </head>
 <h2 style="font-family:Roboto" >Ongoing Orders</h2>
 
