--- a/UserRoles/Views/Order/AdminIndex.cshtml
+++ b/UserRoles/Views/Order/AdminIndex.cshtml
@@ -6,6 +6,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout2.cshtml";
 }
+
 <br />
 <br />
 <br />
@@ -30,71 +31,73 @@
 
 </form>
 
-<table class="table">
-    <tr>
-        <th>
-            Order ID
-        </th>
-        <th>
-            Order Date
-        </th>
-        <th>
-            Payment Type
-        </th>
-
-        <th>
-            Customer Name
-        </th>
-        <th>
-            Customer Surname
-        </th>
-        <th>
-            Customer Phone
-        </th>
-        <th>
-            Email
-        </th>
-
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
+    <table class="table">
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderDate)
-                @*@, @item.OrderDate)*@
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PaymentType)
-            </td>
+            <th>
+                Order ID
+            </th>
+            <th>
+                Order Date
+            </th>
+            <th>
+                Payment Type
+            </th>
 
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Surname)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerPhone)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
+            <th>
+                Customer Name
+            </th>
+            <th>
+                Customer Surname
+            </th>
+            <th>
+                Customer Phone
+            </th>
+            <th>
+                Email
+            </th>
 
-            <td>
-
-                @*@Html.ActionLink("Details", "Details", new { id = item.OrderID }) |*@
-                @Html.ActionLink("Details", "Cusdetails", new { id = item.OrderID }) |
-
-
-            </td>
+            <th></th>
         </tr>
-    }
 
-</table>
-@Html.PagedListPager(Model, page => Url.Action("Index", new { page, searchString = Request.QueryString["searchString"], search = Request.QueryString["search"] }),
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OrderID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OrderDate)
+                    @*@, @item.OrderDate)*@
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PaymentType)
+                </td>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.CustomerName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Surname)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CustomerPhone)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+
+                <td>
+
+                    @*@Html.ActionLink("Details", "Details", new { id = item.OrderID }) |*@
+                    @Html.ActionLink("Details", "Cusdetails", new { id = item.OrderID }) |
+
+
+                </td>
+            </tr>
+        }
+
+    </table>
+
+
+@Html.PagedListPager(Model, page => Url.Action("AdminIndex", new { page, searchString = Request.QueryString["searchString"], search = Request.QueryString["search"] }),
   new PagedListRenderOptions() { Display = PagedListDisplayMode.IfNeeded, DisplayPageCountAndCurrentLocation = true, DisplayItemSliceAndTotal = true })
