--- a/UserRoles/Views/Order/CusDetails.cshtml
+++ b/UserRoles/Views/Order/CusDetails.cshtml
@@ -24,294 +24,257 @@
 <br />
 <br />
 <br />
-<style>
-    .flex-container {
-        display: flex;
-        /* background-color: DodgerBlue;*/
+<head>
+    <meta charset="utf-8">
+    <title>A simple, clean, and responsive HTML invoice template</title>
+
+    <style>
+    .invoice-box {
+        max-width: 800px;
+        margin: auto;
+        padding: 30px;
+        border: 1px solid #eee;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .15);
+        font-size: 16px;
+        line-height: 24px;
+        font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;
+        color: #555;
     }
 
-        .flex-container > div {
-            /*background-color: #f1f1f1;*/
-            margin: 80px;
-            padding: 90px;
-            font-size: 10px;
+    .invoice-box table {
+        width: 100%;
+        line-height: inherit;
+        text-align: left;
+    }
+
+    .invoice-box table td {
+        padding: 5px;
+        vertical-align: top;
+    }
+
+    .invoice-box table tr td:nth-child(2) {
+        text-align: right;
+    }
+
+    .invoice-box table tr.top table td {
+        padding-bottom: 20px;
+    }
+
+    .invoice-box table tr.top table td.title {
+        font-size: 45px;
+        line-height: 45px;
+        color: #333;
+    }
+
+    .invoice-box table tr.information table td {
+        padding-bottom: 40px;
+    }
+
+    .invoice-box table tr.heading td {
+        background: #eee;
+        border-bottom: 1px solid #ddd;
+        font-weight: bold;
+    }
+
+    .invoice-box table tr.details td {
+        padding-bottom: 20px;
+    }
+
+    .invoice-box table tr.item td{
+        border-bottom: 1px solid #eee;
+    }
+
+    .invoice-box table tr.item.last td {
+        border-bottom: none;
+    }
+
+    .invoice-box table tr.total td:nth-child(2) {
+        border-top: 2px solid #eee;
+        font-weight: bold;
+    }
+
+     .only screen and (max-width: 600px) {
+        .invoice-box table tr.top table td {
+            width: 100%;
+            display: block;
+            text-align: center;
         }
-</style>
 
-<h2>Customer Order Details</h2>
-
-<div>
-    <h4>Order</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.OrderID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.OrderID)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.MySignature)
-        </dt>
-        <dd>
-
-            @try
-            {
-
-                var base64 = Convert.ToBase64String(Model.MySignature);
-                var imgsrc = string.Format("data:image/jpg;base64,{0}", base64);
-                <img src='@imgsrc' style="max-width:200px;max-height:200px" />
-
-
-            }
-            catch
-            {
-                @*if (item.Image == null)
-                {
-                    <img width="200" height="200" src="https://ixxidesign.azureedge.net/media/2388044/marcus-kraft-12-dont-worry-be-happy-white.jpg?mode=max&width=562&height=749" />
-                }*@
-            }
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.OrderDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.OrderDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PaymentType)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PaymentType)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CustomerName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CustomerName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Surname)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Surname)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CustomerPhone)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CustomerPhone)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CollDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CollDate)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ExpectedReturnDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ExpectedReturnDate)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ActualReturnDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ActualReturnDate)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ConSig)
-        </dt>
-        <dd>
-
-            @try
-            {
-
-                var base64 = Convert.ToBase64String(Model.ConSig);
-                var imgsrc = string.Format("data:image/jpg;base64,{0}", base64);
-                <img src='@imgsrc' style="max-width:200px;max-height:200px" />
-
-
-            }
-            catch
-            {
-                @*if (item.Image == null)
-                {
-                    <img width="200" height="200" src="https://ixxidesign.azureedge.net/media/2388044/marcus-kraft-12-dont-worry-be-happy-white.jpg?mode=max&width=562&height=749" />
-                }*@
-            }
-        </dd>
-
-        @if (Request.IsAuthenticated && User.IsInRole("Admin") || User.IsInRole("Driver"))
-        {
-
-
-            <dt>
-                @Html.DisplayNameFor(model => model.DriverID)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.DriverID)
-            </dd>
+        .invoice-box table tr.information table td {
+            width: 100%;
+            display: block;
+            text-align: center;
         }
-    </dl>
+    }
 
+    /** RTL **/
+    .rtl {
+        direction: rtl;
+        font-family: Tahoma, 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;
+    }
 
-</div>
-<dl class="flex-container">
-    <dt>
-        @Html.DisplayNameFor(model => model.Seen)
-    </dt>
+    .rtl table {
+        text-align: right;
+    }
 
-    <dd>
-        @Html.DisplayFor(model => model.Seen)
-    </dd>
+    .rtl table tr td:nth-child(2) {
+        text-align: left;
+    }
+    </style>
+</head>
 
-    <dt style="padding-left:5%">
-        @Html.DisplayNameFor(model => model.PickUp)
-    </dt>
+<body>
+    <h2>Customer Order Details</h2>
+    <br />
+    <div class="invoice-box">
+        <table cellpadding="0" cellspacing="0">
+            <tr class="top">
+                <td colspan="2">
+                    <table>
+                        <tr>
+                            <td class="title">
+                                <img src="~/Content/images/GP_BLUE.jpg" style="width:100%; height:100%; max-height:170px; max-width:200px;">
+                            </td>
 
-    <dd>
-        @Html.DisplayFor(model => model.PickUp)
-    </dd>
+                            <td>
+                                Order #: @Model.OrderID <br>
+                                Created: @Model.OrderDate<br>
+                                Due: @Model.CollDate
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+            <tr class="heading">
+                <td>
+                    Company Information
+                </td>
 
-    <dt style="padding-left:5%">
-        @Html.DisplayNameFor(model => model.OutForDel)
-    </dt>
+                <td>
+                    Contact Details
+                </td>
+            </tr>
+            <tr class="details">
+                <td>
+                    Gold Pride<br>
+                    90 street<br>
+                    Durban, SA, 4001
+                </td>
+                <td>
+                    (082) 0798501<br>
+                    dalphene@gmail.com
+                </td>
+            </tr>
+            @*<tr class="information">
+            <td colspan="2">
+                <table>
+                    <tr>
+                        <td>
+                            GoldPride<br>
+                            12345 Sunny Road<br>
+                            Durban, KZN, 4001
+                        </td>
 
-    <dd>
-        @Html.DisplayFor(model => model.OutForDel)
-    </dd>
-    <dt style="padding-left:5%">
-        @Html.DisplayNameFor(model => model.Delivered)
-    </dt>
-
-    <dd>
-        @Html.DisplayFor(model => model.Delivered)
-    </dd>
-    <dt style="padding-left:5%">
-        @Html.DisplayNameFor(model => model.Returned)
-    </dt>
-
-    <dd>
-        @Html.DisplayFor(model => model.Returned)
-    </dd>
-    <dt style="padding-left:5%">
-        @Html.DisplayNameFor(model => model.OutForCol)
-    </dt>
-
-    <dd>
-        @Html.DisplayFor(model => model.OutForCol)
-    </dd>
-    <dt style="padding-left:5%">
-        @Html.DisplayNameFor(model => model.Collected)
-    </dt>
-
-    <dd>
-        @Html.DisplayFor(model => model.Collected)
-    </dd>
-</dl>
-<table class="table">
-    <tr>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Quantity</th>
-        <th>Sub Total</th>
-    </tr>
-    @foreach (var item in Model.OrderDetail)
-    {
-        <tr>
-            <td>@item.ItemsHire.ProductName</td>
-
-            <td>@item.ItemsHire.Price.ToString("C")</td>
-            <td>@item.Quantity</td>
-            <td>@(( item.Quantity * item.ItemsHire.Price).ToString("C"))</td>
-        </tr>
-
-        @*<tr>
-            <td colspan="3">Deposit:</td>
-            <td>
-               
-                @item.Deposit.ToString("C")
+                        <td>
+                            @Model.CustomerName + @Model.Surname<br>
+                            <br>
+                            john@example.com
+                        </td>
+                    </tr>
+                </table>
             </td>
         </tr>*@
-        <tr>
-            <td colspan="3">Total:</td>
-            <td>
-                
-                @item.Total.ToString("C")
-            </td>
-        </tr>
+
+            <tr class="heading">
+                <td>
+                    Customer Information
+                </td>
+
+                <td>
+                    Payment Method
+                </td>
+            </tr>
+
+            <tr class="details">
+                <td>
+                    @Model.CustomerName @Model.Surname<br />
+                    @Model.CustomerPhone<br />
+                    @Model.Email
+                </td>
+
+                <td>
+                    @Model.PaymentType
+                </td>
+            </tr>
+
+            <tr class="heading">
+                <td>
+                    Item &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Quantity
+                </td>
+
+                <td>
+                    Price
+                </td>
+                @*<td>
+                Quantity
+            </td>*@
+            </tr>
+            @foreach (var item in Model.OrderDetail)
+            {
+                <tr class="item">
+                    <td>
+                        @item.ProductName &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;@item.Quantity
+                    </td>
+                    <td>
+                        @item.Price.ToString("C")
+                    </td>
+                    @*<td>
+                    @item.Quantity
+                </td>*@
+                </tr>
+                <tr class="total">
+                    <td></td>
+
+                    <td>
+                        Total: @((item.Quantity * item.ItemsHire.Price).ToString("C"))
+                    </td>
+                </tr>
+            }
 
 
 
-        @*<tr>
-                <td>@item.ItemsHire.ProductName</td>
-                <td>@item.Quantity</td>
-                <td>@item.Price.ToString("C")</td>
-                <td>@item.Total.ToString("C")</td>
-                <td>@item.Deposit.ToString("C")</td>
 
 
-            </tr>*@
-    }
-  
-</table>
+        </table>
+    </div>
+</body>
+@if (Request.IsAuthenticated && User.IsInRole("Admin"))
+{
+    @Html.ActionLink("Edit", "Edit", new { id = Model.OrderID })
 
 
+    <br />
+    @Html.ActionLink("Back to List", "Index")
 
-<p>
-    @*@Html.ActionLink("Edit", "Edit", new { id = Model.OrderID }) |*@
-    @*@using (Html.BeginForm("ActionQrCode", "Order", FormMethod.Post, new { id = "customer-form" }))
-        {
-            <input type="submit" id="btnGenerate" value="Generate QR" class="btn btn-success" onclick="location.href=@Url.Action("ActionQrCode", "Order", null)" />
-        }*@
-    @if (Request.IsAuthenticated && User.IsInRole("Admin"))
-    {
-        @Html.ActionLink("Edit", "Edit", new { id = Model.OrderID })
+} |
+
+@if (Request.IsAuthenticated && User.IsInRole("Driver"))
+{
+    @Html.ActionLink("Edit", "Edit", new { id = Model.OrderID })
 
 
-        <br />
-        @Html.ActionLink("Back to List", "Index")
-
-    } |
-
-    @if (Request.IsAuthenticated && User.IsInRole("Driver"))
-    {
-        @Html.ActionLink("Edit", "Edit", new { id = Model.OrderID })
-
-
-        <br />
-        @Html.ActionLink("Back to List", "DCollection", "DriverVM")
-    }
+    <br />
+    @Html.ActionLink("Back to List", "DCollection", "DriverVM")
+}
 
 
 
-    @if (Request.IsAuthenticated && !User.IsInRole("Admin") && !User.IsInRole("Driver"))
-    {
-        @Html.ActionLink("Back to List", "CusIndex")
-    }
+@if (Request.IsAuthenticated && !User.IsInRole("Admin") && !User.IsInRole("Driver"))
+{
+    @Html.ActionLink("Back to List", "CusIndex")
+}
 </p>
