--- a/UserRoles/Views/Categories/Index.cshtml
+++ b/UserRoles/Views/Categories/Index.cshtml
@@ -13,13 +13,75 @@
 <br />
 <br />
 <br />
+<head>
 
-<h2>Index</h2>
+    <!-- //Meta Tags -->
+    <!-- Style-sheets -->
+    <!-- Bootstrap Css -->
+    <link href="tables/css/bootstrap.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+    <!-- Bootstrap Css -->
+    <!-- Common Css -->
+    <link href="/tables/css/style.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+    <!--// Common Css -->
+    <!-- Nav Css -->
+    @*<link rel="stylesheet" href="/tables/css/style4.css">*@
+    <!--// Nav Css -->
+    <!-- Fontawesome Css -->
+    @*<link href="/tables/css/fontawesome-all.css" rel="stylesheet">*@
+    <!--// Fontawesome Css -->
+    <!--// Style-sheets -->
+    <!--web-fonts-->
+    @*<link href="//fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+        <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">*@
+    <!--//web-fonts-->
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
+</head>
+<h2 style="font-family:Roboto" >Index</h2 >
+<body>
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+    <div class="outer-w3-agile mt-3">
+        <h4 class="tittle-w3-agileits mb-4"></h4>
+        <table class="table table-bordered table-responsive ">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">  @Html.DisplayNameFor(model => model.Category_Name)</th>
+                    <th scope="col"> @Html.DisplayNameFor(model => model.Description)</th>
+                   
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <th scope="row"> @item.Category_Name</th>
+                        <td>  @item.Description</td>
+                       
+                        <td>@Html.ActionLink("Details", "Details", new { id = item.CategoryId }) |</td>
+                    </tr>
+                    @*<tr>
+                            <th scope="row">2</th>
+                            <td>Jacob</td>
+                            <td>Thornton</td>
+                            <td>fat</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>Larry</td>
+                            <td>the Bird</td>
+                            <td>twitter</td>
+                        </tr>*@
+                }
+            </tbody>
+        </table>
+
+
+    </div>
+</body>
+
+@*<table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Category_Name)
@@ -47,7 +109,7 @@
         </tr>
     }
 
-</table>
+</table>*@
 <br />
 <br />
 <br />
