--- a/UserRoles/Views/DriverVM/DCollection.cshtml
+++ b/UserRoles/Views/DriverVM/DCollection.cshtml
@@ -11,66 +11,77 @@
 <br />
 <br />
 
-<h2>Driver Collection</h2>
 
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.OrderID)
-        </th>
+<head>
 
-        <th>
-            @Html.DisplayNameFor(model => model.DeliveryAddress)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
+    <!-- //Meta Tags -->
+    <!-- Style-sheets -->
+    <!-- Bootstrap Css -->
+    <link href="tables/css/bootstrap.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+    <!-- Bootstrap Css -->
+    <!-- Common Css -->
+    <link href="/tables/css/style.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+    <!--// Common Css -->
+    <!-- Nav Css -->
+    @*<link rel="stylesheet" href="/tables/css/style4.css">*@
+    <!--// Nav Css -->
+    <!-- Fontawesome Css -->
+    @*<link href="/tables/css/fontawesome-all.css" rel="stylesheet">*@
+    <!--// Fontawesome Css -->
+    <!--// Style-sheets -->
+    <!--web-fonts-->
+    @*<link href="//fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+        <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">*@
+    <!--//web-fonts-->
 
-        <th>
-            @Html.DisplayNameFor(model => model.CustomerPhone)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DriverID)
-        </th>
-        <th></th>
-    </tr>
+</head>
+<h2 style="font-family:Roboto">Driver Collection</h2>
+<body>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DeliveryAddress)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerPhone)
-            </td>
-
-            <td>
-                @Html.DisplayFor(modelItem => item.DriverID)
-            </td>
-            <td>
-                <a href='@Url.Action( "CusDetails", "Order", new {id = item.OrderID})' class="btn btn-primary">Details</a>
+    <div class="outer-w3-agile mt-3">
+        <h4 class="tittle-w3-agileits mb-4"></h4>
+        <table class="table table-bordered table-responsive ">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">  @Html.DisplayNameFor(model => model.OrderID)</th>
+                    <th scope="col">  @Html.DisplayNameFor(model => model.DeliveryAddress)</th>
+                    <th scope="col">  @Html.DisplayNameFor(model => model.Name)</th>
+                    <th scope="col">  @Html.DisplayNameFor(model => model.Email)</th>
+                    <th scope="col">  @Html.DisplayNameFor(model => model.CustomerPhone)</th>
+                    <th scope="col">  @Html.DisplayNameFor(model => model.DriverID)</th>
+                    <th></th>
 
 
-            </td>
-        </tr>
-    }
 
-</table>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <th scope="row"> @item.OrderID</th>
+                        <td>  @item.DeliveryAddress</td>
+                        <td>  @item.Name</td>
+                        <td>  @item.Email</td>
+                        <td>  @item.CustomerPhone</td>
+                        <td>  @item.DriverID</td>
+                        <td>
+                            <a href='@Url.Action( "CusDetails", "Order", new {id = item.OrderID})' class="btn btn-primary">Details</a>
+
+
+                        </td>
+
+
+                    </tr>
+
+                }
+            </tbody>
+        </table>
+
+
+    </div>
+</body>
 <br />
 <br />
 <br />
