--- a/UserRoles/Views/DriverVM/DDelivery.cshtml
+++ b/UserRoles/Views/DriverVM/DDelivery.cshtml
@@ -10,84 +10,86 @@
 <br />
 <br />
 <br />
-
-<h2>Driver Delivery</h2>
-
-
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.OrderID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DeliveryAddress)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-
-        <th>
-            @Html.DisplayNameFor(model => model.CustomerPhone)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DriverID)
-        </th>
-
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DeliveryAddress)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerPhone)
-            </td>
-            <td>
-
-                @Html.DisplayFor(modelItem => item.DriverID)
-            </td>
-            <td>
-                <a href='@Url.Action( "CusDetails", "Order", new {id = item.OrderID})' class="btn btn-primary">Details</a>
-                @*@Html.ActionLink("Details", "Details", "Order", new {id = item.OrderID}) |*@
-
-
-                @*@using (Html.BeginForm("AcceptOrder", "DriverVM", FormMethod.Post))
-
-                    {
-                        <input type="submit" class="button btn-success " value="Accept Order" />
-                    }*@
-                @*@Html.ActionLink("Accept Order", "Accept", new { id = item.OrderID })*@
-
-            </td>
-
-        </tr>
-    }
-
-</table>
 <br />
 <br />
 <br />
-<br />
-<br />
-<br />
-<br />
-<br />
+
+
+
+
+<head>
+
+    <!-- //Meta Tags -->
+    <!-- Style-sheets -->
+    <!-- Bootstrap Css -->
+    <link href="tables/css/bootstrap.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+    <!-- Bootstrap Css -->
+    <!-- Common Css -->
+    <link href="/tables/css/style.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+    <!--// Common Css -->
+    <!-- Nav Css -->
+    @*<link rel="stylesheet" href="/tables/css/style4.css">*@
+    <!--// Nav Css -->
+    <!-- Fontawesome Css -->
+    @*<link href="/tables/css/fontawesome-all.css" rel="stylesheet">*@
+    <!--// Fontawesome Css -->
+    <!--// Style-sheets -->
+    <!--web-fonts-->
+    @*<link href="//fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+        <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">*@
+    <!--//web-fonts-->
+
+</head>
+<h2 style="font-family:Roboto">Driver Delivery</h2>
+<body>
+
+    <div class="outer-w3-agile mt-3">
+        <h4 class="tittle-w3-agileits mb-4"></h4>
+        <table class="table table-bordered table-responsive ">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">  @Html.DisplayNameFor(model => model.OrderID)</th>
+                    <th scope="col">  @Html.DisplayNameFor(model => model.DeliveryAddress)</th>
+                    <th scope="col">  @Html.DisplayNameFor(model => model.Name)</th>
+                    <th scope="col">  @Html.DisplayNameFor(model => model.Email)</th>
+                    <th scope="col">  @Html.DisplayNameFor(model => model.CustomerPhone)</th>
+                    <th scope="col">  @Html.DisplayNameFor(model => model.DriverID)</th>
+                    <th></th>
+                   
+
+
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                <tr>
+                    <th scope="row"> @item.OrderID</th>
+                    <td>  @item.DeliveryAddress</td>
+                    <td>  @item.Name</td>
+                    <td>  @item.Email</td>
+                    <td>  @item.CustomerPhone</td>
+                    <td>  @item.DriverID</td>
+                    <td>
+                        <a href='@Url.Action( "CusDetails", "Order", new {id = item.OrderID})' class="btn btn-primary">Details</a>
+                      
+
+                    </td>
+
+
+                </tr>
+
+                }
+            </tbody>
+        </table>
+
+
+    </div>
+</body>
+
+
+
+
 <br />
 <br />
 <br />
